--- a/css/main.css
+++ b/css/main.css
@@ -51,7 +51,7 @@ footer
 	margin: 10px 20px;
 	font-size: 0.8em;
 	text-align: center;
-	border-top: 1px solid #C9E0ED;
+	border-top: 1px solid black;
 }
 
 #logo
